# Finanzuebersicht

./: .env.example  .gitignore  .repomixignore  ARCHITECTURE_NOTES.md  CLAUDE.md  Makefile  README.md  banken.json  classen.py  data_manager.py  docker-compose.yml  main.py  navigator.py  orchestrator.py  pyproject.toml  repomix-output.xml  requirements.txt  shared_config.py  start.bat  start.sh
.claude/: settings.local.json
.run/: All Backend Services.run.xml  All Services.run.xml  FrontendService.run.xml  Full Stack Dev.run.xml  Orchestrator.run.xml  account-service.run.xml  analytics-service.run.xml  api-gateway.run.xml  frontend-web.run.xml  markedataservice.run.xml  marketdata-service.run.xml  masterdata-service.run.xml  person-service.run.xml  portfolio-service.run.xml
FrontendService/: README.md  __init__.py  pyproject.toml
FrontendService/seeds/: personen.json
FrontendService/src/: FrontendSerivce.py  __init__.py  __main__.py  launcher.py  logging_config.py  main.py  navigator.py
FrontendService/src/controllers/: AccountController.py
FrontendService/src/data/: DataManager.py  banken.json  mongo_repository.py
FrontendService/src/helpers/: UniversalMethoden.py  account_editing.py  account_overview.py  data_transform.py  ui_flow.py
FrontendService/src/models/: Account.py  AppState.py
FrontendService/src/screens/: AccountAddition.py  AccountEditing.py  AccountOverview.py  AccountSummary.py  BankAssignment.py  FreibetragDisplay.py  FreibetragInput.py  MainScreen.py  NewBank.py  NewPerson.py  PersonInfo.py  PersonSelection.py
FrontendService/src/screens/accountsummaryinnerScreens/: ForecastScreen.py  HeatmapScreen.py  MetricsScreen.py  MonthlyComparisonScreen.py  PieChartScreen.py  TimeSeriesScreen.py
FrontendService/src/screens/accountsummaryinnerScreens/PieChartinnerScreens/: DepoAnalyse.py  analysis_api_client.py  depot_holdings_helpers.py  ui_helpers.py
FrontendService/src/screens/accountsummaryinnerScreens/PieChartinnerScreens/DepoAnalyseScreens/: ChartScreen.py  ColumnSelectorScreen.py  DepotPositionPieScreen.py  GaugeScreen.py  TableScreen.py  chart_interactions.py  tab_controllers.py
FrontendService/src/ui/: background_loader.py  components.py  date_widgets.py
FrontendService/tests/: conftest.py  test_account_editing_regressions.py  test_account_overview_update_flow.py  test_analysis_api_client_benchmark_catalog.py  test_data_manager_marketdata_errors.py  test_depot_holdings_helpers.py  test_robustness_guards.py  test_ui_flow_regressions.py
docs/architecture/: backend-conventions.md  deployment-basics.md  development.md  gateway.md  local-development.md  marketdata-financials-contract.md  marketdata-identifier-layer.md  (+5 more)
frontend-web/: README.md  index.html  package-lock.json  package.json  tsconfig.json  vite.config.ts
helper/: account_addition_helpers.py  calculate_helper.py  universalMethoden.py
markedataservice/: README.md  __init__.py  pyproject.toml  requirements.txt
markedataservice/docs/: data_source_strategy.md
markedataservice/src/: __init__.py  main.py
markedataservice/src/api/: __init__.py  stock.py
markedataservice/src/builders/: __init__.py  stock_builder.py
markedataservice/src/builders/Etfs/: FTSEGlobalAllCap.py  MsciEmergingMarkets.py  MsciWorld.py  VanguardSp500.py  __init__.py
markedataservice/src/models/: ETFData.py  __init__.py  stock_model.py
markedataservice/src/repositories/: __init__.py  file_repository.py  mongo_repository.py
markedataservice/src/repositories/providers/: __init__.py  base_provider.py  yfinance_provider.py
markedataservice/src/services/: __init__.py  analysis_service.py  base_service.py  stock_service.py
markedataservice/src/utils/: __init__.py  config.py  logger.py
markedataservice/tests/: conftest.py  smoke_marketdata_mongo.py  test_analysis_service.py  test_stock_api.py  test_stock_service.py
screens/: screen_account_addition.py  screen_account_overview.py  screen_account_summary.py  screen_bank_assignment.py  screen_freibetrag_display.py  screen_freibetrag_input.py  screen_main.py  screen_new_bank.py  screen_new_person.py  screen_person_info.py  screen_person_selection.py
scripts/: dev-up.sh  dev.py  migrate_depot_portfolio_bindings.py
services/marketdata-service/: README.md  pyproject.toml
services/marketdata-service/app/: app_factory.py  cache.py  config.py  dependencies.py  identifiers.py  main.py  models.py  openfigi_client.py  providers.py  repositories.py  service.py  ttl_lru_cache.py  warning_filters.py
services/marketdata-service/app/clients/: __init__.py  fmp_client.py  yfinance_client.py
services/marketdata-service/app/identity/: __init__.py  base.py  fmp_client.py  fmp_resolver.py  openfigi_client.py  openfigi_resolver.py
services/marketdata-service/app/providers/: __init__.py  base.py  inmemory_provider.py  yfinance_provider.py
services/marketdata-service/app/routers/: api_v1.py
services/marketdata-service/tests/: test_conventions.py  test_dependencies_identifier_resolver.py  test_fmp_client.py  test_fmp_resolver.py  test_marketdata_api.py  test_marketdata_service.py  test_openfigi_client.py  test_security_identity_repository.py  test_warning_filters.py  test_yfinance_client.py  test_yfinance_provider.py
services/masterdata-service/: README.md  pyproject.toml
services/masterdata-service/app/: config.py  dependencies.py  main.py  models.py
services/masterdata-service/app/repositories/: masterdata_repository.py
services/masterdata-service/app/routers/: api_v1.py
services/masterdata-service/app/services/: masterdata_service.py
services/masterdata-service/tests/: test_conventions.py  test_masterdata_api.py
shared/: README.md  pyproject.toml
shared/src/finanzuebersicht_shared/: __init__.py  app.py  base_models.py  config.py  errors.py  health.py  logging.py  models.py  request_context.py  testing.py  time_utils.py
shared_config_pkg/: README.md  pyproject.toml
shared_config_pkg/src/finanzuebersicht_shared/: __init__.py  config.py  logging_utils.py
shared_config_pkg/tests/: test_logging_utils.py
src/: main.py  navigator.py
(+242 files in other folders)
