[project]
name = "finanzuebersicht-monorepo"
version = "0.1.0"
description = "Greenfield monorepo for a web-based finance platform"
readme = "README.md"
requires-python = ">=3.12"
dependencies = []

[dependency-groups]
dev = [
  "pytest>=8.2,<9",
  "ruff>=0.6,<1",
]

[tool.uv]
package = false

[tool.uv.workspace]
members = [
  "services/api-gateway",
  "services/masterdata-service",
  "services/person-service",
  "services/account-service",
  "services/portfolio-service",
  "services/marketdata-service",
  "services/analytics-service",
  "shared",
]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "UP"]
