[project]
name = "finanzuebersicht-monorepo"
version = "0.1.0"
description = "Greenfield monorepo for a web-based finance platform"
readme = "README.md"
requires-python = ">=3.12"
dependencies = []

[dependency-groups]
dev = [
  "mypy>=1.11,<2",
  "pytest>=8.2,<9",
  "ruff>=0.6,<1",
]

[tool.uv]
package = false

[tool.uv.workspace]
members = [
  "services/api-gateway",
  "services/masterdata-service",
  "services/person-service",
  "services/account-service",
  "services/portfolio-service",
  "services/marketdata-service",
  "services/analytics-service",
  "shared",
]

[tool.uv.sources]
finanzuebersicht-shared = { workspace = true }

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM"]
ignore = ["UP046"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"

[tool.pytest.ini_options]
addopts = "-ra"
testpaths = [
  "services",
]

[tool.mypy]
python_version = "3.12"
warn_unused_ignores = true
warn_redundant_casts = true
disallow_untyped_defs = true
check_untyped_defs = true
no_implicit_optional = true
exclude = [
  "shared_config_pkg",
]
