[project]
name = "finanzuebersicht-shared"
version = "0.1.0"
description = "Shared models and utilities for finanzuebersicht services"
requires-python = ">=3.12"
dependencies = [
  "fastapi>=0.115,<1",
  "pydantic>=2.7,<3",
  "pydantic-settings>=2.4,<3",
]

[build-system]
requires = ["hatchling>=1.24"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/finanzuebersicht_shared"]
